--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Game.JS</title>
+  <title>Game</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <div class="score-block">
-    <span class="score">0</span>
+
+  <div class="start-screen">
+    <div class="splash-screen">
+      <div class="button">
+        <button>Start</button>
+        <div class="show-score"></div>
+      </div>
+    </div>
   </div>
 
-  <div class="button">
-    <button>Start</button>
+  <div class="score-block">
+    <span class="score">0</span>
   </div>
 
   <div class="game">
