add background music

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     </div>
   </div>
 
-  <audio src="sounds/bonk.WAV"></audio>
+  <audio id="bonk" src="sounds/bonk.WAV"></audio>
+  <audio id="music" src="sounds/music.wav"></audio>
   <script src="js/app.js"></script>
 </body>
 </html>
