add toggle music

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div class="button">
         <button>Start</button>
         <div class="show-score"></div>
+        <div class="music">Music: <span id="on">OFF</span></div>
       </div>
     </div>
   </div>
