--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
   </div>
 
-  <audio id="bonk" src="sounds/oi.ogg"></audio>
+  <audio id="bonk" src="sounds/bonk.WAV"></audio>
   <audio id="music" src="sounds/music.ogg"></audio>
   <script src="js/app.js"></script>
 </body>
