fix start button

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <div class="start-screen">
     <div class="splash-screen">
       <div class="button">
-        <button>Start</button>
         <div class="show-score"></div>
-        <div class="music">Music: <span id="on">OFF</span></div>
+        <div class="music">
+          Music: <span id="on">OFF</span>
+        </div>
+        <button>Start</button>
       </div>
     </div>
   </div>
